<resources>
    <string name="app_name">FunNotes</string>
    <string name="hello_blank_fragment">Раздел находится в работе, скоро будет</string>
    <string name="registration_string">Регистрация</string>
    <string name="e_mail_string">E-mail</string>
    <string name="password_hint_string">Пароль</string>
    <string name="repeat_password_hint">Повторите пароль</string>
    <string name="next_string">Продолжить</string>
    <string name="register_string">Зарегистрироваться</string>
    <string name="name_string">Имя</string>
    <string name="surname_string">Фамилия</string>
    <string name="sign_in_string">Вход</string>
    <string name="sign_in_button_string">Войти</string>
    <string name="my_day_string">Мой день</string>
    <string name="tasks_string">Задачи</string>
    <string name="tips_string">Советы</string>
    <string name="profile_string">Профиль</string>
    <string name="edit_string">Редактировать</string>
    <string name="edit_profile_string">Редактировать</string>
    <string name="missing_value_string">Поля не должны быть пустыми</string>
    <string name="task_string">Задача</string>
    <string name="enter_task_name_string">Введите назание</string>
    <string name="task_description_string">Описание задачи</string>
    <string name="enter_task_description_string">Введите краткое описание</string>
    <string name="add_reminder_string">Добавить напоминание</string>
    <string name="create_string">Создать</string>
    <string name="cancel_string">Отмена</string>
    <string name="set_date_string">Задать дату выполнения</string>
    <string name="save_string">Сохранить</string>
    <string name="edit_password_string">Изменить пароль</string>
    <string name="password_editing_string">Изменение пароля</string>
    <string name="new_password_hint_string">Новый пароль</string>
    <string name="passwords_not_match_string">Пароли не совпадают</string>
    <string name="wrong_password_string">Неверный пароль</string>
</resources>