<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.RegistrationFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_string"
            app:layout_constraintBottom_toTopOf="@+id/email_edit_text_registration"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:layout_editor_absoluteX="0dp" />


        <EditText
            android:id="@+id/email_edit_text_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:inputType="textEmailAddress"
            android:hint="@string/e_mail_string"
            app:layout_constraintBottom_toTopOf="@+id/password_edit_text_registration"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="0dp" />


        <EditText
            android:id="@+id/password_edit_text_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint_string"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/repeat_password_edit_text_registration"
            app:layout_constraintTop_toBottomOf="@+id/email_edit_text_registration"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/repeat_password_edit_text_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password_hint"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@id/go_to_second_registration_button"
            app:layout_constraintTop_toBottomOf="@+id/password_edit_text_registration"
            tools:layout_editor_absoluteX="0dp" />


        <Button
            android:id="@+id/go_to_second_registration_button"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repeat_password_edit_text_registration"
            tools:layout_editor_absoluteX="55dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>